@@ -105,6 +105,11 @@ specifier|private
 name|boolean
 name|outputUnigrams
 decl_stmt|;
+DECL|field|outputUnigramsIfNoShingles
+specifier|private
+name|boolean
+name|outputUnigramsIfNoShingles
+decl_stmt|;
 DECL|field|tokenSeparator
 specifier|private
 name|String
@@ -235,6 +240,15 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+name|outputUnigramsIfNoShingles
+operator|=
+name|getBoolean
+argument_list|(
+literal|"outputUnigramsIfNoShingles"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|tokenSeparator
 operator|=
 name|args
@@ -283,6 +297,13 @@ operator|.
 name|setOutputUnigrams
 argument_list|(
 name|outputUnigrams
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|setOutputUnigramsIfNoShingles
+argument_list|(
+name|outputUnigramsIfNoShingles
 argument_list|)
 expr_stmt|;
 name|r
