@@ -1336,6 +1336,102 @@ block|, }
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Test with unigrams disabled except when there are no shingles, with    * a single input token. Using default min/max shingle sizes: 2/2.  No    * shingles will be created, since there are fewer input tokens than    * min shingle size.  However, because outputUnigramsIfNoShingles is    * set to true, even though outputUnigrams is set to false, one    * unigram should be output.    */
+DECL|method|testOutputUnigramsIfNoShingles
+specifier|public
+name|void
+name|testOutputUnigramsIfNoShingles
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Reader
+name|reader
+init|=
+operator|new
+name|StringReader
+argument_list|(
+literal|"test"
+argument_list|)
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"outputUnigrams"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"outputUnigramsIfNoShingles"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|ShingleFilterFactory
+name|factory
+init|=
+operator|new
+name|ShingleFilterFactory
+argument_list|()
+decl_stmt|;
+name|factory
+operator|.
+name|init
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+name|TokenStream
+name|stream
+init|=
+name|factory
+operator|.
+name|create
+argument_list|(
+operator|new
+name|WhitespaceTokenizer
+argument_list|(
+name|DEFAULT_VERSION
+argument_list|,
+name|reader
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTokenStreamContents
+argument_list|(
+name|stream
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
